fix: using gap to fix margin isuues in desktop

--- a/styles/layout/_about__blogr.scss
+++ b/styles/layout/_about__blogr.scss
@@ -35,10 +35,8 @@
     }
 
     @include mQ(680px) {
-        .about__display__img {
-            // transform: scale(1);
-        }
-
+        margin-top: 0px;
+       
         .about__content {
             padding: 0 100px;
         }
@@ -55,10 +53,16 @@
         .about__content {
             padding: 0;
         }
+        
+        .about__content__main__content,
+        .about__content__sub__content {
+            padding-right: 2rem;
+        }
+    
     }
 
     @include mQ(1280px) {
-        margin-top: 224px;
+       // margin-top: 224px;
 
         .about__display {
             position: relative;
