--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -65,10 +65,12 @@
         padding-right: 0;
         padding-left: 10.3125rem;
         position: relative;
+        padding-top: 0;
 
         .hero__main__content {
             grid-area: 2/1/2/2;
             padding-right: 55px;
+            padding-top: 20px;
         }
 
         .hero__sub__content {
@@ -82,13 +84,15 @@
         }
         .hero__picture {
             grid-area: 2/2/4/3;             
-          //  position: relative;
+            position: relative;
            // right: -44px;
           //  top: 35px;
         }
 
         .hero__picture__img {
-           
+           position: relative;
+           right: -100px;
+           transform: scale(1.4)
         }
 
         .hero__main__content__subtitle,
